<?xml version="1.0"?>
<package format="2">
  <name>graph_test</name>
  <version>0.0.0</version>
  <description>The graph_test package</description>

  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>graph_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>graph_core</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>graph_core</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
